--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 
     <div class="content">
         <div class="container mt-5">
-            <div class="toast show">
+            <div class="toast">
                 <div class="toast-header">
-                    Toast Header
-                    <button type="button" class="btn-close " data-bs-dismiss="toast"></button>
+                    <strong class="me-auto">Toast Header</strong>
+                    <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
                 </div>
                 <div class="toast-body">
-                    Some text inside the toast body
+                    <p>Some text inside the toast body</p>
                 </div>
             </div>
         </div>
