--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div class="content">
         <div class="container mt-5">
-            <div class="toast">
+            <div class="toast show">
                 <div class="toast-header">
                     <strong class="me-auto">Toast Header</strong>
                     <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
@@ -84,6 +84,17 @@
                 <div class="toast-body">
                     <p>Some text inside the toast body</p>
                 </div>
+            </div><br><br>
+
+            <button class="btn btn-dark" id="demo" type="button">click me</button>
+            <div class="toast ">
+                <div class="toast-header">
+                    <h2>Lorem, ipsum.</h2>
+                    <button class="btn-close" data-bs-dismiss="toast"></button>
+                </div>
+                <div class="toast-body">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum ipsum fuga repellendus nobis voluptate in ipsam laboriosam accusantium facere aliquam.
+                </div>
             </div>
         </div>
     </div>
@@ -96,13 +107,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.js"></script>
     <script>
         // for toasts 
-document.getElementById("toastbtn").onclick = function() {
-    var toastElList = [].slice.call(document.querySelectorAll('.toast'))
-    var toastList = toastElList.map(function(toastEl) {
-    return new bootstrap.Toast(toastEl)
+    document.getElementById("toastbtn").onclick = function() {
+        var toastElList = [].slice.call(document.querySelectorAll('.toast'))
+        var toastList = toastElList.map(function(toastEl) {
+        return new bootstrap.Toast(toastEl)
     })
-    toastList.forEach(toast => toast.show())
-}
+        toastList.forEach(toast => toast.show())
+    }
+
+    document.getElementById("demo").onclick = function(){
+        var toastElList = [].slice.call(document.querySelectorAll('.toast'));
+        var toastList = toastElList.map(function(toastEl){
+            return new bootstrap.Toast(toastEl)
+        });
+        toastList.forEach(toast => toast.show());
+    }
     </script>
 </body>
 </html>
