--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dark Mode</title>
 
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.css" rel="stylesheet">
@@ -65,7 +64,7 @@
 
     <div class="content">
         <div class="container mt-5">
-            <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" >
+            <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
                 <div class="container-fluid">
                     <ul class="navbar-nav">
                         <li class="nav-item">
