Lesson 25 Dark mode

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -48,7 +48,7 @@
         }
     </style>
 
-    <title>ScrollSpy</title>
+    <title>Dark Mode</title>
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="10" >
 
@@ -58,9 +58,9 @@
         </div>
 
 
-    <!-- Lesson 24 -->
+    <!-- Lesson 25 -->
 
-    <!-- Scrollspy -->
+    <!-- Dark Mode -->
 
     <div class="content">
         <div class="container mt-5">
