Lesson 27 Utility Classes / text

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     </style>
 
-    <title>Utilities / Helper / Floats & Clearfix</title>
+    <title>Utilities / Helper / Text </title>
 </head>
 <body >
 
@@ -60,24 +60,31 @@
         </div>
 
 
-    <!-- Lesson 27 b -->
+    <!-- Lesson 27 c -->
 
-    <!-- Float and Clearfix-->
+    <!-- text-->
 
     <div class="content">
         <div class="container mt-5">
-            <div class="clearfix">
-                <span class="float-start border border-primary">Float left</span>
-                <span class="float-end border border-primary">Float right</span>
-            </div>
-            <div class="">
-                <div class="float-sm-end">Float right on small screens or wider</div><br>
-                <div class="float-md-end">Float right on medium screens or wider</div><br>
-                <div class="float-lg-end">Float right on large screens or wider</div><br>
-                <div class="float-xl-end">Float right on extra large screens or wider</div><br>
-                <div class="float-xxl-end">Float right on XXL screens or wider</div><br>
-                <div class="float-none">Float none</div>
-            </div>
+            <!-- Alignments for text -->
+            <p class="text-center">Lorem ipsum dolor sit.</p>
+            <p class="text-start">Lorem ipsum dolor sit.</p>
+            <p class="text-end">Lorem ipsum dolor sit.</p>
+
+            <!-- for text transform -->
+            <p class="text-capitalize">Lorem ipsum dolor sit.</p>
+            <p class="text-uppercase">Lorem ipsum dolor sit.</p>
+            <p class="text-lowercase">Lorem ipsum dolor sit.</p>
+
+            <!-- for font size -->
+            <p class="fs-3">Lorem ipsum dolor sit.</p>
+            <p class="fs-2">Lorem ipsum dolor sit.</p>
+            <p class="fs-1">Lorem ipsum dolor sit.</p>
+
+            <!-- text decoration -->
+            <p class="text-decoration-underline">This text has a line underneath it.</p>
+            <p class="text-decoration-line-through">This text has a line going through it.</p>
+            <a href="#" class="text-decoration-none">This link has its text decoration removed</a>
         </div>
     </div>
     
