Lesson 27 Utility Classes / Width

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     </style>
 
-    <title>Utilities / Helper / Text </title>
+    <title>Utilities / Helper / width </title>
 </head>
 <body >
 
@@ -60,31 +60,18 @@
         </div>
 
 
-    <!-- Lesson 27 c -->
+    <!-- Lesson 27 d-->
 
-    <!-- text-->
+    <!-- Width -->
 
     <div class="content">
         <div class="container mt-5">
-            <!-- Alignments for text -->
-            <p class="text-center">Lorem ipsum dolor sit.</p>
-            <p class="text-start">Lorem ipsum dolor sit.</p>
-            <p class="text-end">Lorem ipsum dolor sit.</p>
-
-            <!-- for text transform -->
-            <p class="text-capitalize">Lorem ipsum dolor sit.</p>
-            <p class="text-uppercase">Lorem ipsum dolor sit.</p>
-            <p class="text-lowercase">Lorem ipsum dolor sit.</p>
-
-            <!-- for font size -->
-            <p class="fs-3">Lorem ipsum dolor sit.</p>
-            <p class="fs-2">Lorem ipsum dolor sit.</p>
-            <p class="fs-1">Lorem ipsum dolor sit.</p>
-
-            <!-- text decoration -->
-            <p class="text-decoration-underline">This text has a line underneath it.</p>
-            <p class="text-decoration-line-through">This text has a line going through it.</p>
-            <a href="#" class="text-decoration-none">This link has its text decoration removed</a>
+            <div class="w-25 bg-primary text-center text-light">Width 25%</div>
+            <div class="w-50 bg-primary text-center text-light">Width 50%</div>
+            <div class="w-75 bg-primary text-center text-light">Width 75%</div>
+            <div class="w-100 bg-primary text-center text-light">Width 100%</div>
+            <div class="w-auto bg-primary text-center text-light">Auto Width</div>
+            <div class="mw-100 bg-primary text-center text-light">Max Width 100%</div>
         </div>
     </div>
     
