Lesson 27 Utlity Classes /  height

--- a/index.html
+++ b/index.html
@@ -60,18 +60,20 @@
         </div>
 
 
-    <!-- Lesson 27 d-->
+    <!-- Lesson 27 e -->
 
-    <!-- Width -->
+    <!-- Height -->
 
     <div class="content">
         <div class="container mt-5">
-            <div class="w-25 bg-primary text-center text-light">Width 25%</div>
-            <div class="w-50 bg-primary text-center text-light">Width 50%</div>
-            <div class="w-75 bg-primary text-center text-light">Width 75%</div>
-            <div class="w-100 bg-primary text-center text-light">Width 100%</div>
-            <div class="w-auto bg-primary text-center text-light">Auto Width</div>
-            <div class="mw-100 bg-primary text-center text-light">Max Width 100%</div>
+            <div style="height:200px;background-color:#ddd">
+                <div class="h-25 bg-warning">Height 25%</div><br>
+                <div class="h-50 bg-warning">Height 50%</div><br>
+                <div class="h-75 bg-warning">Height 75%</div><br>
+                <div class="h-100 bg-warning">Height 100%</div><br>
+                <div class="h-auto bg-warning">Auto Height</div><br>
+                <div class="mh-100 bg-warning" style="height:500px">Max Height 100%</div>
+            </div>  
         </div>
     </div>
     
