--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     </style>
 
-    <title>Utilities / Helper / width </title>
+    <title>Utilities / Helper / spacing / margin & padding </title>
 </head>
 <body >
 
@@ -60,20 +60,23 @@
         </div>
 
 
-    <!-- Lesson 27 e -->
+    <!-- Lesson 27 f -->
 
-    <!-- Height -->
+    <!-- Spacing / margin & padding-->
 
     <div class="content">
         <div class="container mt-5">
-            <div style="height:200px;background-color:#ddd">
-                <div class="h-25 bg-warning">Height 25%</div><br>
-                <div class="h-50 bg-warning">Height 50%</div><br>
-                <div class="h-75 bg-warning">Height 75%</div><br>
-                <div class="h-100 bg-warning">Height 100%</div><br>
-                <div class="h-auto bg-warning">Auto Height</div><br>
-                <div class="mh-100 bg-warning" style="height:500px">Max Height 100%</div>
-            </div>  
+            <div class="pt-1 bg-warning">I have a top padding </div>
+            <div class="pt-2 bg-success">I have a top padding </div><!-- bigger padding than the previous one -->
+            <div class="pb-2 bg-success">I have a bottom padding </div>
+            <div class="ps-2 bg-success">I have a start (or left) padding </div>
+            <div class="mt-1 bg-info">I have a top margin</div>
+            <div class="mt-2 bg-info">I have a top margin</div><!-- bigger margin than the previous one -->
+            <div class="mt-n1 bg-info">I have a negative margin</div><!-- bigger margin than the previous one -->
+            <div class="mb-2 bg-info">I have a bottom margin</div>
+            <div class="ms-2 bg-info">I have a start (or left) margin</div>
+            <div class="m-4 bg-info">Lorem ipsum dolor sit amet.</div><!-- margin on all sides -->
+            <div class="p-4 bg-info">Lorem ipsum dolor sit amet.</div><!-- padding on all sides -->
         </div>
     </div>
     
