--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     </style>
 
-    <title>Utilities / Helper / spacing / margin & padding </title>
+    <title>Utilities / Helper / Shadow </title>
 </head>
 <body >
 
@@ -60,23 +60,16 @@
         </div>
 
 
-    <!-- Lesson 27 f -->
+    <!-- Lesson 27 g -->
 
-    <!-- Spacing / margin & padding-->
+    <!-- shadow -->
 
     <div class="content">
         <div class="container mt-5">
-            <div class="pt-1 bg-warning">I have a top padding </div>
-            <div class="pt-2 bg-success">I have a top padding </div><!-- bigger padding than the previous one -->
-            <div class="pb-2 bg-success">I have a bottom padding </div>
-            <div class="ps-2 bg-success">I have a start (or left) padding </div>
-            <div class="mt-1 bg-info">I have a top margin</div>
-            <div class="mt-2 bg-info">I have a top margin</div><!-- bigger margin than the previous one -->
-            <div class="mt-n1 bg-info">I have a negative margin</div><!-- bigger margin than the previous one -->
-            <div class="mb-2 bg-info">I have a bottom margin</div>
-            <div class="ms-2 bg-info">I have a start (or left) margin</div>
-            <div class="m-4 bg-info">Lorem ipsum dolor sit amet.</div><!-- margin on all sides -->
-            <div class="p-4 bg-info">Lorem ipsum dolor sit amet.</div><!-- padding on all sides -->
+            <div class="shadow-none p-4 mb-4 bg-light">No shadow</div> <!-- to remove shadow -->
+            <div class="shadow-sm p-4 mb-4 bg-white">Small shadow</div><!-- to put small shadow -->
+            <div class="shadow p-4 mb-4 bg-white">Default shadow</div><!-- for default shadow -->
+            <div class="shadow-lg p-4 mb-4 bg-white">Large shadow</div><!-- for big shadow -->
         </div>
     </div>
     
