Lesson 27 Utility Classes / Aspect Ratio

--- a/index.html
+++ b/index.html
@@ -60,16 +60,21 @@
         </div>
 
 
-    <!-- Lesson 27 g -->
+    <!-- Lesson 27 h -->
 
-    <!-- shadow -->
+    <!-- Aspect Ratio -->
 
     <div class="content">
         <div class="container mt-5">
-            <div class="shadow-none p-4 mb-4 bg-light">No shadow</div> <!-- to remove shadow -->
-            <div class="shadow-sm p-4 mb-4 bg-white">Small shadow</div><!-- to put small shadow -->
-            <div class="shadow p-4 mb-4 bg-white">Default shadow</div><!-- for default shadow -->
-            <div class="shadow-lg p-4 mb-4 bg-white">Large shadow</div><!-- for big shadow -->
+            <div class="ratio ratio-21x9">
+                <iframe src="https://www.youtube.com/watch?v=8w9Ko1dfSyk" frameborder="0"></iframe>
+            </div>
+            <div class="ratio ratio-1x1">
+                <iframe src="https://www.youtube.com/watch?v=8w9Ko1dfSyk" frameborder="0"></iframe>
+            </div>
+            <div class="ratio ratio-16x9">
+                <iframe src="https://www.youtube.com/watch?v=8w9Ko1dfSyk" frameborder="0"></iframe>
+            </div>
         </div>
     </div>
     
