Lesson 27 Utility Classes / visibility, close btn and screen readers

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     </style>
 
-    <title>Utilities / Helper / Shadow </title>
+    <title>Utilities / Helper / Visibility, Close Icon & Screenreaders </title>
 </head>
 <body >
 
@@ -60,21 +60,21 @@
         </div>
 
 
-    <!-- Lesson 27 h -->
+    <!-- Lesson 27 i -->
 
-    <!-- Aspect Ratio -->
+    <!-- Visibilty, Close icon & Screenreaders -->
 
     <div class="content">
         <div class="container mt-5">
-            <div class="ratio ratio-21x9">
-                <iframe src="https://www.youtube.com/watch?v=8w9Ko1dfSyk" frameborder="0"></iframe>
-            </div>
-            <div class="ratio ratio-1x1">
-                <iframe src="https://www.youtube.com/watch?v=8w9Ko1dfSyk" frameborder="0"></iframe>
-            </div>
-            <div class="ratio ratio-16x9">
-                <iframe src="https://www.youtube.com/watch?v=8w9Ko1dfSyk" frameborder="0"></iframe>
-            </div>
+            <!-- for visibility -->
+            <div class="invisible">i am invisible</div>
+            <div class="visible">i am visible</div>
+
+            <!-- close icon -->
+            <button type="button" class="btn-close"></button>
+
+            <!-- for screen readers -->
+            <span class="visually-hidden">I will be hidden on all screens except for screen readers.</span>
         </div>
     </div>
     
