Lesson 27 Utility Classes / Background colors & colors

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     </style>
 
-    <title>Utilities / Helper / Visibility, Close Icon & Screenreaders </title>
+    <title>Utilities / Helper / Background colors & colors</title>
 </head>
 <body >
 
@@ -60,21 +60,30 @@
         </div>
 
 
-    <!-- Lesson 27 i -->
+    <!-- Lesson 27 j -->
 
-    <!-- Visibilty, Close icon & Screenreaders -->
+    <!-- background colors and text colors-->
 
     <div class="content">
         <div class="container mt-5">
-            <!-- for visibility -->
-            <div class="invisible">i am invisible</div>
-            <div class="visible">i am visible</div>
+            <!-- for background colors -->
+            <div class="bg-primary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, sunt.</div> <!-- blue --><br>
+            <div class="bg-warning">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, sunt.</div><!-- yellow --><br>
+            <div class="bg-danger">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, sunt.</div><!-- red --><br>
+            <div class="bg-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, sunt.</div><!-- lightblue --><br>
+            <div class="bg-success">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, sunt.</div><!-- green --><br>
 
-            <!-- close icon -->
-            <button type="button" class="btn-close"></button>
+            <!-- colors -->
+            <div class="text-warning">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, repellendus!</div>
+            <div class="text-primary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, repellendus!</div>
+            <div class="text-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, repellendus!</div>
+            <div class="text-danger">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, repellendus!</div>
+            <div class="text-success">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, repellendus!</div><br>
 
-            <!-- for screen readers -->
-            <span class="visually-hidden">I will be hidden on all screens except for screen readers.</span>
+            <!-- links -->
+            <a href="" class="link-warning">Lorem, ipsum.</a>
+            <a href="" class="link-success">Lorem, ipsum.</a>
+            <a href="" class="link-dark">Lorem, ipsum.</a>
         </div>
     </div>
     
